update: usage content and images

--- a/src/pages/components/popover/usage.mdx
+++ b/src/pages/components/popover/usage.mdx
@@ -102,43 +102,27 @@ four columns.
 </Row>
 
 <DoDontRow>
-  <DoDont caption="Do keep the width size of a popover within four columns.">
+  <DoDont caption="Do keep width between one to four columns.">
 
-![Do keep the width size of a popover within four columns.](images/popover-usage-4-do.png)
+![Do keep width between one to four columns.](images/popover-usage-4-do.png)
 
   </DoDont>
-  <DoDont type="dont" caption="Don't exceed a popover width size of four columns.">
+  <DoDont type="dont" caption="Don't exceed width of four columns.">
 
-![Don't exceed a popover width size of four columns.](images/popover-usage-4-dont.png)
+![Don't exceed width of four columns.](images/popover-usage-4-dont.png)
 
   </DoDont>
 </DoDontRow>
 
 #### Trigger button
 
-The trigger button can use any of our button types and can be set at these three
-sizes—48px (lg), 40px (md) or 32px (sm).
+A popover is controlled by a trigger button. By default, we use an icon button
+to trigger a popover to open. However, as long as the trigger button is
+interactive it can visually change its shape and size depending on the usecase.
 
-<Row>
-<Column colLg={8}>
-
-![Popover trigger button size](images/popover-usage-5.png)
-
-</Column>
-</Row>
-
-#### Icon
-
-If a trigger button contains an icon, the icon size should be either 20px or
-16px.
-
-<Row>
-<Column colLg={8}>
-
-![Popover icon size](images/popover-usage-6.png)
-
-</Column>
-</Row>
+The trigger button can open the popover on click, hover, or focus depending on
+what it is being used for. For more information about trigger buttons, see the
+disclosure pattern.
 
 ## Content
 
@@ -172,7 +156,7 @@ side of the popover. The popover can open from the **left**, **right**,
 <Row>
 <Column colLg={8}>
 
-![No tip popover top and bottom directions with left and right alignments.](images/popover-usage-7.png)
+![No tip popover top and bottom directions with left and right alignments.](images/popover-usage-5.png)
 
 </Column>
 </Row>
@@ -180,7 +164,7 @@ side of the popover. The popover can open from the **left**, **right**,
 <Row>
 <Column colLg={8}>
 
-![No tip popover left and right directions with top and bottom alignments.](images/popover-usage-8.png)
+![No tip popover left and right directions with top and bottom alignments.](images/popover-usage-6.png)
 
 </Column>
 </Row>
@@ -194,7 +178,7 @@ what size button is being used.
 <Row>
 <Column colLg={8}>
 
-![No tip popover container and trigger button spacing.](images/popover-usage-9.png)
+![No tip popover container and trigger button spacing.](images/popover-usage-7.png)
 
 </Column>
 </Row>
@@ -202,12 +186,12 @@ what size button is being used.
 <DoDontRow>
   <DoDont caption="Do flush align the popover edge with the trigger button.">
 
-![Do flush align the popover edge with the trigger button.](images/popover-usage-10-do.png)
+![Do flush align the popover edge with the trigger button.](images/popover-usage-8-do.png)
 
   </DoDont>
   <DoDont type="dont" caption="Don't arbitrarily place the popover near the trigger button.">
 
-![Don't arbitrarily place the popover near the trigger button.](images/popover-usage-10-dont.png)
+![Don't arbitrarily place the popover near the trigger button.](images/popover-usage-8-dont.png)
 
   </DoDont>
 </DoDontRow>
@@ -221,19 +205,20 @@ buttons.
 
 ### Placement
 
-The popover can open from the left, right, bottom, or top of the trigger button.
-When using a caret tip, the trigger button and caret tip should be vertically
-center with eachother.
+The popover can open from the **left**, **right**, **bottom**, or **top** of the
+trigger button. When using a caret tip, the trigger button and caret tip should
+be vertically center with eachother.
 
 ### Alignment
 
-The container of the popover may be aligned to start, center, or end to keep the
-container from bleeding off the page or covering important information.
+The container of the popover may be aligned to **start**, **center**, or **end**
+to keep the container from bleeding off the page or covering important
+information.
 
 <Row>
 <Column colLg={8}>
 
-![Caret tip popover top and bottom directions with left, center, and right alignments.](images/popover-usage-11.png)
+![Caret tip popover top and bottom directions with left, center, and right alignments.](images/popover-usage-9.png)
 
 </Column>
 </Row>
@@ -241,7 +226,7 @@ container from bleeding off the page or covering important information.
 <Row>
 <Column colLg={8}>
 
-![Caret tip popover left and right directions with top, center, and bottom alignments.](images/popover-usage-12.png)
+![Caret tip popover left and right directions with top, center, and bottom alignments.](images/popover-usage-10.png)
 
 </Column>
 </Row>
@@ -252,7 +237,7 @@ should be placed 4px away from the popover container.
 <Row>
 <Column colLg={8}>
 
-![Caret tip popover container and trigger button spacing.](images/popover-usage-13.png)
+![Caret tip popover container and trigger button spacing.](images/popover-usage-11.png)
 
 </Column>
 </Row>
@@ -260,12 +245,12 @@ should be placed 4px away from the popover container.
 <DoDontRow>
   <DoDont caption="Do align the caret tip center with the trigger button.">
 
-![Do align the caret tip center with the trigger button.](images/popover-usage-14-do.png)
+![Do align the caret tip center with the trigger button.](images/popover-usage-12-do.png)
 
   </DoDont>
   <DoDont type="dont" caption="Don't misalign the caret tip with the trigger button.">
 
-![Don't misalign the caret tip with the trigger button.](images/popover-usage-14-dont.png)
+![Don't misalign the caret tip with the trigger button.](images/popover-usage-12-dont.png)
 
   </DoDont>
 </DoDontRow>
@@ -278,13 +263,13 @@ area where the trigger button sits within.
 ### Placement
 
 Tab tip popovers nest within another layer on a page. The tab tip can appear on
-the left and right of the container and the edges should be flush with the layer
-edges it sits within.
+the **left** and **right** of the container and the edges should be flush with
+the layer edges it sits within.
 
 <Row>
 <Column colLg={8}>
 
-![Tab tip popover bottom directions with left and right alignments.](images/popover-usage-15.png)
+![Tab tip popover bottom directions with left and right alignments.](images/popover-usage-13.png)
 
 </Column>
 </Row>
@@ -297,20 +282,20 @@ container because they are connected to eachother.
 <Row>
 <Column colLg={8}>
 
-![Tab tip popover container and trigger button spacing.](images/popover-usage-16.png)
+![Tab tip popover container and trigger button spacing.](images/popover-usage-14.png)
 
 </Column>
 </Row>
 
 <DoDontRow>
-  <DoDont caption="Do top align the tab tip with the layer behind it to keep clean lines between the popover and the layer underneath.">
+  <DoDont caption="Do top align the tab tip with the layer behind it.">
 
-![Do top align the tab tip with the layer behind it to keep clean lines between the popover and the layer underneath.](images/popover-usage-17-do.png)
+![Do top align the tab tip with the layer behind it.](images/popover-usage-15-do.png)
 
   </DoDont>
-  <DoDont type="dont" caption="Don't misalign the tab tip with the layer behind it to avoid creating jagged lines between the popover and the layer underneath.">
+  <DoDont type="dont" caption="Don't misalign the tab tip with the layer behind it.">
 
-![Don't misalign the tab tip with the layer behind it to avoid creating jagged lines between the popover and the layer underneath.](images/popover-usage-17-dont.png)
+![Don't misalign the tab tip with the layer behind it.](images/popover-usage-15-dont.png)
 
   </DoDont>
 </DoDontRow>
@@ -328,7 +313,7 @@ open popover container.
 <Row>
 <Column colLg={8}>
 
-![Popover close click target area.](images/popover-usage-18.png)
+![Popover close click target area.](images/popover-usage-16.png)
 
 </Column>
 </Row>
@@ -353,22 +338,6 @@ NVDA: Users can trigger a button to open a popover by pressing `Enter` or
 
 ## Modifiers
 
-#### Containers
-
-There are three different container variants of a popover—no tip, caret tip, and
-tab tip. The default popover has no tip. No tip popovers are typically used when
-the trigger button has a visually defined down state. Caret tips should be used
-to help show the relationship between a popover and where it was triggered from.
-Tab tips are specifically used in headers and toolbars.
-
-<Row>
-<Column colLg={8}>
-
-![Popover container variants.](images/popover-usage-19.png)
-
-</Column>
-</Row>
-
 #### Colors
 
 Popovers come in three different container colors—`$layer-01`, `$layer-02`, and
@@ -377,7 +346,7 @@ Popovers come in three different container colors—`$layer-01`, `$layer-02`, an
 <Row>
 <Column colLg={8}>
 
-![Popover container colors.](images/popover-usage-20.png)
+![Popover container colors.](images/popover-usage-17.png)
 
 </Column>
 </Row>
@@ -392,7 +361,7 @@ the layer underneath.
 <Row>
 <Column colLg={8}>
 
-![Popover container corner options.](images/popover-usage-21.png)
+![Popover container corner options.](images/popover-usage-18.png)
 
 </Column>
 </Row>
@@ -401,14 +370,13 @@ the layer underneath.
 
 #### Form components
 
-Form components that have menus, like dropdowns, selects and date pickers, use
-popovers as a base layer.
+Form components that have menus, like dropdowns, use popovers as a base layer.
 
 #### Disclosures
 
-Disclosures use popovers as a base layer, and then build off of that layer to
-include varying text, and interactive elements for a wide variety of usecases.
-For further guidance, see Carbon's [disclosure pattern].
+Disclosures use popovers as a base layer. Disclosures are comprised of a popover
+container, text, and interactive elements. For further guidance, see Carbon's
+disclosure pattern.
 
 #### Overflow menus
 
@@ -417,10 +385,14 @@ is triggered, the menu opens and uses a tab tip popover as its base. For further
 guidance, see Carbon's
 [overflow menu](<[https://www.carbondesignsystem.com/components/overflow-menu/usage/](https://www.carbondesignsystem.com/components/overflow-menu/usage/)>).
 
+#### Toggletips
+
+TBD guidance.
+
 #### Tooltips
 
-Tooltips use popovers as a base layer. Tooltips are comprised of a popover
-container and text. For further guidance, see Carbon's
+Tooltips use popovers as a base layer. Tooltips are comprised of a trigger
+button, popover container and text. For further guidance, see Carbon's
 [tooltip](<[https://www.carbondesignsystem.com/components/tooltip/usage/](https://www.carbondesignsystem.com/components/tooltip/usage/)>).
 
 ## References
