add variant anchor links

--- a/src/pages/components/popover/usage.mdx
+++ b/src/pages/components/popover/usage.mdx
@@ -52,11 +52,11 @@ tip. Depending on the usecase, caret tips or tab tips can be added to the
 container to help show the relationship between the popover and where it was
 triggered from.
 
-| Variant   | Purpose                                                                                                                                                                                                                                             |
-| --------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| No tip    | Popovers without a tip are typically used when the trigger button has a visually defined down state.                                                                                                                                                |
-| Caret tip | Popovers with a caret tip should be used to help show the relationship between the popover and where it was triggered from. A caret tip is typically used when the trigger button does not have a visually defined down state and for icon buttons. |
-| Tab tip   | Popovers can have a tab tip when the popover is connected to a toolbar or header area.                                                                                                                                                              |
+| Variant                 | Purpose                                                                                                                                                                                                                                             |
+| ----------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| [No tip](#no tip)       | Popovers without a tip are typically used when the trigger button has a visually defined down state.                                                                                                                                                |
+| [Caret tip](#caret tip) | Popovers with a caret tip should be used to help show the relationship between the popover and where it was triggered from. A caret tip is typically used when the trigger button does not have a visually defined down state and for icon buttons. |
+| [Tab tip](#tab tip)     | Popovers can have a tab tip when the popover is connected to a toolbar or header area.                                                                                                                                                              |
 
 <Row>
 <Column colLg={8}>
