update interactions section

--- a/src/pages/components/popover/usage.mdx
+++ b/src/pages/components/popover/usage.mdx
@@ -306,9 +306,16 @@ container because they are connected to eachother.
 
 #### Mouse
 
-Users trigger a popover to open by clicking the trigger button. Users can close
-the popover by clicking again on the trigger button or anywhere outside of the
-open popover container.
+Users trigger a popover to open and close by clicking or hovering on the trigger
+button depending on the usecase.
+
+Click: Open the popover by clicking on the trigger button. Close the popover by
+clicking on the trigger button again, or anywhere outside of the open popover
+container.
+
+Hover: Open the popover by hovering over the trigger button. Close the popover
+by hovering off of the popover or clicking anywhere outside of the open popover
+container.
 
 <Row>
 <Column colLg={8}>
@@ -320,10 +327,8 @@ open popover container.
 
 #### Keyboard
 
-When the popover control has focus:
-
-- `Enter` and `Space` activates the popover control and toggles the visibility
-  of the popover content.
+Focus: When the popover control has focus `Enter` or `Space` activates the
+popover control and toggles the visibility of the popover content.
 
 #### Screen readers
 
