--- a/src/pages/components/popover/usage.mdx
+++ b/src/pages/components/popover/usage.mdx
@@ -36,10 +36,10 @@ tooltips, overflow menus, and dropdown menus.
 #### When to use
 
 - Use when placing interactive elements, like links, buttons, or rich media to
-  make the component accessible. Disclosures that contain interactive elements,
-  like interactive toggletips, use popovers as a base container layer to achieve
-  this accessibility standard. For further guidance on how to display content
-  within a popover, see the [disclosure pattern].
+  make the component more accessible. Disclosures that contain interactive
+  elements use popovers as a base container layer to achieve this accessibility
+  standard. For further guidance on how to display content within a popover, see
+  the disclosure pattern.
 - Use when you need to display additional details for specific elements on a
   page. If your popover exceeds four columns in width, use a modal instead.
 
@@ -54,9 +54,9 @@ triggered from.
 
 | Variant                 | Purpose                                                                                                                                                                                                                                             |
 | ----------------------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
-| [No tip](#no tip)       | Popovers without a tip are typically used when the trigger button has a visually defined down state.                                                                                                                                                |
-| [Caret tip](#caret tip) | Popovers with a caret tip should be used to help show the relationship between the popover and where it was triggered from. A caret tip is typically used when the trigger button does not have a visually defined down state and for icon buttons. |
-| [Tab tip](#tab tip)     | Popovers can have a tab tip when the popover is connected to a toolbar or header area.                                                                                                                                                              |
+| [No tip](no-tip)        | Popovers without a tip are typically used when the trigger button has a visually defined down state.                                                                                                                                                |
+| [Caret tip](#caret-tip) | Popovers with a caret tip should be used to help show the relationship between the popover and where it was triggered from. A caret tip is typically used when the trigger button does not have a visually defined down state and for icon buttons. |
+| [Tab tip](#tab-tip)     | Popovers can have a tab tip when the popover is connected to a toolbar or header area.                                                                                                                                                              |
 
 <Row>
 <Column colLg={8}>
@@ -388,7 +388,7 @@ disclosure pattern.
 Overflow menus use popovers as a base layer. When the overflow menu icon button
 is triggered, the menu opens and uses a tab tip popover as its base. For further
 guidance, see Carbon's
-[overflow menu](<[https://www.carbondesignsystem.com/components/overflow-menu/usage/](https://www.carbondesignsystem.com/components/overflow-menu/usage/)>).
+[overflow menu](https://www.carbondesignsystem.com/components/overflow-menu/usage/).
 
 #### Toggletips
 
@@ -398,16 +398,15 @@ TBD guidance.
 
 Tooltips use popovers as a base layer. Tooltips are comprised of a trigger
 button, popover container and text. For further guidance, see Carbon's
-[tooltip](<[https://www.carbondesignsystem.com/components/tooltip/usage/](https://www.carbondesignsystem.com/components/tooltip/usage/)>).
+[tooltip](https://www.carbondesignsystem.com/components/tooltip/usage/).
 
 ## References
 
-Popup,
-[Component research documentation](https://open-ui.org/components/popup.research#popup),
+Popup,[Component research](https://open-ui.org/components/popup.research#popup),
 (OpenUI)
 
-Disclosure, [W3C WAI-ARIA
-practices](https://www.w3.org/TR/wai-aria-practices-1.1/#disclosure](https://www.w3.org/TR/wai-aria-practices-1.1/#disclosure),
+Disclosure,
+[W3C WAI-ARIA practices]([https://www.w3.org/TR/wai-aria-practices-1.1/#disclosure),
 (W3C Working Group Note)
 
 ## Feedback
