style: table edit

--- a/src/pages/components/popover/style.mdx
+++ b/src/pages/components/popover/style.mdx
@@ -27,12 +27,12 @@ The width and height of a popover container can vary depending on the amount of
 content within it. We recommend to not exceed a popover width size of four
 columns.
 
-| Element           | Property      | px / rem | Spacing token |
-| ----------------- | ------------- | -------- | ------------- |
-| Popover container | max-width     | 352 / 22 | –             |
-|                   | padding       | 16 / 1   | `$spacing-05` |
-| Caret tip         | height, width | 8 / .5   | –             |
-|                   | margin-top    | 4 / .25  | `$spacing-02` |
+| Element   | Property      | px / rem | Spacing token |
+| --------- | ------------- | -------- | ------------- |
+| Container | max-width     | 352 / 22 | –             |
+|           | padding       | 16 / 1   | `$spacing-05` |
+| Caret tip | height, width | 8 / .5   | –             |
+|           | margin-top    | 4 / .25  | `$spacing-02` |
 
 <div className="image--fixed">
 
