update: typography style tables

--- a/src/pages/components/UI-shell-header/style.mdx
+++ b/src/pages/components/UI-shell-header/style.mdx
@@ -15,7 +15,7 @@ inline theming to the shell zone.
 | ------------ | ---------------- | ---------------- |
 | Header       | background color | `$background`    |
 |              | border-bottom    | `$border-subtle` |
-| Product name | text color       | `$text-primary ` |
+| Product name | text color       | `$text-primary`  |
 
 ![ui shell header](images/header-style-1.png)
 
@@ -121,12 +121,12 @@ inline theming to the shell zone.
 
 Menu labels and text should be set in sentence case.
 
-| Element        | Font-size (px/rem) | Font-weight    | Type token       |
-| -------------- | ------------------ | -------------- | ---------------- |
-| Product name   | 14 / 0.875         | SemiBold / 600 | `$heading-01`    |
-| Company prefix | 14 / 0.875         | Regular / 400  | `$body-short-01` |
-| Header link    | 14 / 0.875         | Regular / 400  | `$body-short-01` |
-| Sub-menu       | 14 / 0.875         | Regular / 400  | `$body-short-01` |
+| Element        | Font-size (px/rem) | Font-weight    | Type token            |
+| -------------- | ------------------ | -------------- | --------------------- |
+| Product name   | 14 / 0.875         | SemiBold / 600 | `$heading-compact-01` |
+| Company prefix | 14 / 0.875         | Regular / 400  | `$body-compact-01`    |
+| Header link    | 14 / 0.875         | Regular / 400  | `$body-compact-01`    |
+| Sub-menu       | 14 / 0.875         | Regular / 400  | `$body-compact-01`    |
 
 ## Structure
 
