--- a/src/pages/components/accordion/style.mdx
+++ b/src/pages/components/accordion/style.mdx
@@ -50,10 +50,10 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 All accordion titles are set in sentence case. See the accordion
 [content guidelines](/components/accordion/usage#content) for more details.
 
-| Class                     | Font-size (px/rem) | Font-weight   | Type token      |
-| ------------------------- | ------------------ | ------------- | --------------- |
-| `.bx--accordion__title`   | 14 / 0.875         | Regular / 400 | `$body-long-01` |
-| `.bx--accordion__content` | 14 / 0.875         | Regular / 400 | `$body-long-01` |
+| Element | Font-size (px/rem) | Font-weight   | Type token |
+| ------- | ------------------ | ------------- | ---------- |
+| Title   | 14 / 0.875         | Regular / 400 | `$body-01` |
+| Content | 14 / 0.875         | Regular / 400 | `$body-01` |
 
 ## Structure
 
