--- a/src/pages/components/button/style.mdx
+++ b/src/pages/components/button/style.mdx
@@ -187,10 +187,10 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 Button text should be set in sentence case, with only the first word in a phrase
 and any proper nouns capitalized.
 
-| Class                  | Font-size (px/rem) | Font-weight   | Type style       |
-| ---------------------- | ------------------ | ------------- | ---------------- |
-| `.bx--btn`             | 14 / 0.875         | Regular / 400 | `$body-short-01` |
-| `.bx--btn--expressive` | 16 / 1             | Regular / 400 | `$body-short-02` |
+| Element                  | Font-size (px/rem) | Font-weight   | Type token         |
+| ------------------------ | ------------------ | ------------- | ------------------ |
+| Button text              | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
+| Button text (expressive) | 16 / 1             | Regular / 400 | `$body-compact-02` |
 
 ## Structure
 
@@ -235,19 +235,20 @@ recommended by design as the proper distance between buttons.
 
 ### Sizes
 
-There are six button sizes: small, medium, large productive, large expressive, 
-extra large, and 2XL. The large expressive button is used in editorial and 
-digital marketing experiences. See [Button sizes](/components/button/usage#button-sizes) 
-on the Usage tab for more information about specific use cases for each button size.
+There are six button sizes: small, medium, large productive, large expressive,
+extra large, and 2XL. The large expressive button is used in editorial and
+digital marketing experiences. See
+[Button sizes](/components/button/usage#button-sizes) on the Usage tab for more
+information about specific use cases for each button size.
 
-| Element           | Size              | Height (px / rem)      |
-| ----------------- | ----------------- | ---------------------- |
-| Button            | Small             | 32 / 2                 |
-|                   | Medium            | 40 / 2.5               |
-|                   | Large productive  | 48 / 3                 |
-|                   | Large expressive  | 48 / 3                 |
-| Full bleed button | Extra large       | 64 / 4                 |
-|                   | 2xl               | 80 / 5                 |
+| Element           | Size             | Height (px / rem) |
+| ----------------- | ---------------- | ----------------- |
+| Button            | Small            | 32 / 2            |
+|                   | Medium           | 40 / 2.5          |
+|                   | Large productive | 48 / 3            |
+|                   | Large expressive | 48 / 3            |
+| Full bleed button | Extra large      | 64 / 4            |
+|                   | 2xl              | 80 / 5            |
 
 <Row>
 <Column colLg={8}>
