--- a/src/pages/components/link/style.mdx
+++ b/src/pages/components/link/style.mdx
@@ -42,11 +42,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 There are three size variants for the link component: small, medium, and large.
 
-| Property | Font-size (px / rem) | Font-weight   | Type token       |
-| -------- | -------------------- | ------------- | ---------------- |
-| Small    | 12 / 0.75            | Regular / 400 | `$text-helper`   |
-| Medium   | 14 / 0.875           | Regular / 400 | `$body-short-01` |
-| Large    | 16 / 1               | Regular / 400 | `$body-short-02` |
+| Element | Font-size (px/rem) | Font-weight   | Type token         |
+| ------- | ------------------ | ------------- | ------------------ |
+| Small   | 12 / 0.75          | Regular / 400 | `$helper-text-01`  |
+| Medium  | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
+| Large   | 16 / 1             | Regular / 400 | `$body-compact-02` |
 
 <Row>
 <Column colLg={8}>
