--- a/src/pages/components/overflow-menu/style.mdx
+++ b/src/pages/components/overflow-menu/style.mdx
@@ -38,12 +38,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Typography
 
-Overflow menu text should be set in sentence case with the first letter of the
-first word capitalized.
+Overflow menu option text should be set in sentence case with the first letter
+of the first word capitalized.
 
-| Property                          | Font-size (px/rem) | Font-weight   | Type token       |
-| --------------------------------- | ------------------ | ------------- | ---------------- |
-| `.bx--overflow-menu-options__btn` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| Element          | Font-size (px/rem) | Font-weight   | Type token         |
+| ---------------- | ------------------ | ------------- | ------------------ |
+| Menu option text | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
 
 ## Structure
 
