--- a/src/pages/components/radio-button/style.mdx
+++ b/src/pages/components/radio-button/style.mdx
@@ -28,13 +28,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Typography
 
-_Radio button_ labels and headings should be set in sentence case, with only the
-first word in a phrase and any proper nouns capitalized.
+Radio button labels should be set in sentence case, with only the first word in
+a phrase and any proper nouns capitalized.
 
-| Class                      | Font-size (px/rem) | Font-weight   | Type token       |
-| -------------------------- | ------------------ | ------------- | ---------------- |
-| `.bx--label`               | 12 / 0.75          | Regular / 400 | `$label-01`      |
-| `.bx--radio-button__label` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| Element            | Font-size (px/rem) | Font-weight   | Type token         |
+| ------------------ | ------------------ | ------------- | ------------------ |
+| Group label        | 12 / 0.75          | Regular / 400 | `$label-01`        |
+| Radio button label | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
 
 ## Structure
 
