--- a/src/pages/components/search/style.mdx
+++ b/src/pages/components/search/style.mdx
@@ -50,10 +50,9 @@ input color is `$field-02` and is used on `$ui-01` page backgrounds.
 Search text should be set in sentence case, with only the first letter of the
 first word capitalized.
 
-| Property          | Font-size  | Font-weight   | Type token       |
-| ----------------- | ---------- | ------------- | ---------------- |
-| `.bx--search--lg` | 16 / 1     | Regular / 400 | `$body-short-02` |
-| `.bx--search--sm` | 14 / 0.875 | Regular / 400 | `$body-short-01` |
+| Element    | Font-size (px/rem) | Font-weight   | Type token         |
+| ---------- | ------------------ | ------------- | ------------------ |
+| Field text | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
 
 ## Structure
 
