--- a/src/pages/components/tag/style.mdx
+++ b/src/pages/components/tag/style.mdx
@@ -41,9 +41,9 @@ text color should be 5 steps away from the tag background color
 
 ## Typography
 
-Tag text should be set in sentence case, and should only have one word. However,
-if more than one is necessary, then connect the words using a hyphen with no
-spaces.
+Tag labels should be set in sentence case, and should only have one word.
+However, if more than one is necessary, then connect the words using a hyphen
+with no spaces.
 
 | Element | Font-size (px/rem) | Font-weight   | Type token  |
 | ------- | ------------------ | ------------- | ----------- |
