--- a/src/pages/components/text-input/style.mdx
+++ b/src/pages/components/text-input/style.mdx
@@ -50,12 +50,12 @@ Text input labels and placeholder text should be set in sentence case, with only
 the first word in a phrase and any proper nouns capitalized. Text input labels
 should be three words or less.
 
-| Element       | Font-size (px/rem) | Font-weight   | Type token      |
-| ------------- | ------------------ | ------------- | --------------- |
-| Label         | 12 / 0.75          | Regular / 400 | `$label-01`     |
-| Field text    | 14 / 0.875         | Regular / 400 | `$body-long-01` |
-| Helper text   | 12 / 0.75          | Regular / 400 | `$label-01`     |
-| Error message | 12 / 0.75          | Regular / 400 | `$label-01`     |
+| Element       | Font-size (px/rem) | Font-weight   | Type token         |
+| ------------- | ------------------ | ------------- | ------------------ |
+| Label         | 12 / 0.75          | Regular / 400 | `$label-01`        |
+| Field text    | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
+| Helper text   | 12 / 0.75          | Regular / 400 | `$helper-text-01`  |
+| Error message | 12 / 0.75          | Regular / 400 | `$label-01`        |
 
 ## Structure
 
