--- a/src/pages/components/UI-shell-left-panel/style.mdx
+++ b/src/pages/components/UI-shell-left-panel/style.mdx
@@ -83,11 +83,11 @@ inline theming to the shell zone.
 
 Menu labels and text should be set in sentence case.
 
-| Element       | Font-size (px/rem) | Font-weight    | Type token       |
-| ------------- | ------------------ | -------------- | ---------------- |
-| Link          | 14 / 0.875         | SemiBold / 600 | `$heading-01`    |
-| Sub-menu      | 14 / 0.875         | SemiBold / 600 | `$heading-01`    |
-| Sub-menu item | 14 / 0.875         | Regular / 400  | `$body-short-01` |
+| Element       | Font-size (px/rem) | Font-weight    | Type token            |
+| ------------- | ------------------ | -------------- | --------------------- |
+| Link          | 14 / 0.875         | SemiBold / 600 | `$heading-compact-01` |
+| Sub-menu      | 14 / 0.875         | SemiBold / 600 | `$heading-compact-01` |
+| Sub-menu item | 14 / 0.875         | Regular / 400  | `$body-compact-01`    |
 
 ## Structure
 
