--- a/src/pages/components/UI-shell-right-panel/style.mdx
+++ b/src/pages/components/UI-shell-right-panel/style.mdx
@@ -45,9 +45,9 @@ Shell is from the
 
 ## Typography
 
-| Element | Font-size (px/rem) | Font-weight    | Type token    |
-| ------- | ------------------ | -------------- | ------------- |
-| Item    | 14 / 0.875         | SemiBold / 600 | `$heading-01` |
+| Element | Font-size (px/rem) | Font-weight    | Type token            |
+| ------- | ------------------ | -------------- | --------------------- |
+| Item    | 14 / 0.875         | SemiBold / 600 | `$heading-compact-01` |
 
 ## Structure
 
