--- a/src/pages/components/breadcrumb/style.mdx
+++ b/src/pages/components/breadcrumb/style.mdx
@@ -27,12 +27,11 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Typography
 
-When a user hovers overs a breadcrumb, the breadcrumb title should be
-underlined.
+When a user hovers overs a breadcrumb, the breadcrumb link should be underlined.
 
-| Class       | Font-size (px/rem) | Font-weight   | Type token       |
-| ----------- | ------------------ | ------------- | ---------------- |
-| `.bx--link` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| Element | Font-size (px/rem) | Font-weight   | Type token         |
+| ------- | ------------------ | ------------- | ------------------ |
+| Link    | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
 
 ## Structure
 
