--- a/src/pages/components/checkbox/style.mdx
+++ b/src/pages/components/checkbox/style.mdx
@@ -43,14 +43,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Typography
 
-Checkbox headings and labels should be sentence case, with only the first word
-in a phrase and any proper nouns capitalized. Checkbox headings and labels
-should not exceed three words.
+Checkbox labels should be sentence case, with only the first word in a phrase
+and any proper nouns capitalized. Checkbox labels should not exceed three words.
 
-| Class                 | Font-size (px/rem) | Font-weight   | Type token       |
-| --------------------- | ------------------ | ------------- | ---------------- |
-| `.bx--label`          | 12 / 0.75          | Regular / 400 | `$label-01`      |
-| `.bx--checkbox-label` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| Element        | Font-size (px/rem) | Font-weight   | Type token         |
+| -------------- | ------------------ | ------------- | ------------------ |
+| Group label    | 12 / 0.75          | Regular / 400 | `$label-01`        |
+| Checkbox label | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
 
 ## Structure
 
