--- a/src/pages/components/code-snippet/style.mdx
+++ b/src/pages/components/code-snippet/style.mdx
@@ -89,10 +89,9 @@ Carbon has defined a set of accessible syntax colors. View an incontext
 
 ## Typography
 
-| Class                       | Font-size (px/rem) | Font-weight   | Type token |
-| --------------------------- | ------------------ | ------------- | ---------- |
-| `.bx--snippet.code`         | 12 / 0.75          | Regular / 400 | `$code-01` |
-| `.bx--snippet--inline.code` | 12 / 0.75          | Regular / 400 | `$code-01` |
+| Element   | Font-size (px/rem) | Font-weight   | Type token |
+| --------- | ------------------ | ------------- | ---------- |
+| Code text | 12 / 0.75          | Regular / 400 | `$code-01` |
 
 ## Structure
 
