--- a/src/pages/components/content-switcher/style.mdx
+++ b/src/pages/components/content-switcher/style.mdx
@@ -45,13 +45,13 @@ Hover states only apply to `unselected` buttons.
 
 ## Typography
 
-Content switcher text should be set in sentence case, with only the first word
-in a phrase and any proper nouns capitalized. The text should not exceed three
-words.
+Content switcher label text should be set in sentence case, with only the first
+word in a phrase and any proper nouns capitalized. The label text should not
+exceed three words.
 
-| Class                       | Font-size (px/rem) | Font-weight   | Type style       |
-| --------------------------- | ------------------ | ------------- | ---------------- |
-| `.bx--content-switcher-btn` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| Element | Font-size (px/rem) | Font-weight   | Type token         |
+| ------- | ------------------ | ------------- | ------------------ |
+| Label   | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
 
 ## Structure
 
