--- a/src/pages/components/dropdown/style.mdx
+++ b/src/pages/components/dropdown/style.mdx
@@ -112,16 +112,16 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 ## Typography
 
 All dropdown text should be set in sentence case, with only the first word in a
-phrase and any proper nouns capitalized. Dropdown options should not exceed
-three words.
+phrase and any proper nouns capitalized. Dropdown menu option text should not
+exceed three words.
 
-| Element          | Font-size  | Font-weight   | Type token        |
-| ---------------- | ---------- | ------------- | ----------------- |
-| Label            | 12 / 0.75  | Regular / 400 | `$label-01`       |
-| Field text       | 14 / 0.875 | Regular / 400 | `$body-short-01`  |
-| Menu option text | 14 / 0.875 | Regular / 400 | `$body-short-01`  |
-| Error message    | 12 / 0.75  | Regular / 400 | `$label-01`       |
-| Helper text      | 12 / 0.75  | Regular / 400 | `$helper-text-01` |
+| Element          | Font-size (px/rem) | Font-weight   | Type token         |
+| ---------------- | ------------------ | ------------- | ------------------ |
+| Label            | 12 / 0.75          | Regular / 400 | `$label-01`        |
+| Field text       | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
+| Menu option text | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
+| Helper text      | 12 / 0.75          | Regular / 400 | `$helper-text-01`  |
+| Error message    | 12 / 0.75          | Regular / 400 | `$label-01`        |
 
 ## Structure
 
