--- a/src/pages/components/file-uploader/style.mdx
+++ b/src/pages/components/file-uploader/style.mdx
@@ -72,13 +72,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 The file uploader label and description text should be set in sentence case,
 with only the first letter of the first word in the sentence capitalized.
 
-| Element       | Font-size (px / rem) | Font-weight     | Type token               |
-| ------------- | -------------------- | --------------- | ------------------------ |
-| Label         | 14 / 0.875           | Semi-bold / 600 | `$productive-heading-01` |
-| Description   | 14 / 0.875           | Regular / 400   | `$body-short-01`         |
-| File name     | 14 / 0.875           | Regular / 400   | `$body-short-01`         |
-| Error message | 12 / 0.75            | Regular / 400   | `$label-01`              |
-| Drop text     | 14 / 0.875           | Regular / 400   | `$body-short-01`         |
+| Element       | Font-size (px/rem) | Font-weight     | Type token            |
+| ------------- | ------------------ | --------------- | --------------------- |
+| Label         | 14 / 0.875         | Semi-bold / 600 | `$heading-compact-01` |
+| Description   | 14 / 0.875         | Regular / 400   | `$body-compact-01`    |
+| File name     | 14 / 0.875         | Regular / 400   | `$body-compact-01`    |
+| Error message | 12 / 0.75          | Regular / 400   | `$label-01`           |
+| Drop text     | 14 / 0.875         | Regular / 400   | `$body-compact-01`    |
 
 ## Structure
 
