--- a/src/pages/components/form/style.mdx
+++ b/src/pages/components/form/style.mdx
@@ -39,14 +39,13 @@ the first word capitalized. Refer to the
 [toggle](/components/toggle/usage), and [button](/components/button/usage) pages
 for specific typography details on each component.
 
-| Property                       | Font-size (px/rem) | Font-weight   | Type token        |
-| ------------------------------ | ------------------ | ------------- | ----------------- |
-| Heading                        | 28 / 1.75          | Regular / 400 | `$heading-03`     |
-| `.bx--label`                   | 12 / 0.75          | Regular / 400 | `$label-01`       |
-| `.bx--text-input`              | 14 / 0.875         | Regular / 400 | `$body-short-01`  |
-| `.bx--text-input::placeholder` | 14 / 0.875         | Regular / 400 | `$body-short-01`  |
-| `.bx--form-requirement`        | 12 / 0.75          | Regular / 400 | `$label-01`       |
-| `.bx--form__helper-text`       | 12 / 0.75          | Regular / 400 | `$helper-text-01` |
+| Element       | Font-size (px/rem) | Font-weight   | Type token         |
+| ------------- | ------------------ | ------------- | ------------------ |
+| Heading       | 28 / 1.75          | Regular / 400 | `$heading-03`      |
+| Label         | 12 / 0.75          | Regular / 400 | `$label-01`        |
+| Field text    | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
+| Helper text   | 12 / 0.75          | Regular / 400 | `$helper-text-01`  |
+| Error message | 12 / 0.75          | Regular / 400 | `$label-01`        |
 
 ## Structure
 
