--- a/src/pages/components/inline-loading/style.mdx
+++ b/src/pages/components/inline-loading/style.mdx
@@ -25,12 +25,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Typography
 
-Button text should be set in sentence case, with only the first word in a phrase
-and any proper nouns capitalized.
+Text should be set in sentence case, with only the first word in a phrase and
+any proper nouns capitalized.
 
-| Class                       | Font-size (px/rem) | Font-weight   | Type token  |
-| --------------------------- | ------------------ | ------------- | ----------- |
-| `.bx--inline-loading__text` | 12 / 0.75          | Regular / 400 | `$label-01` |
+| Element | Font-size (px/rem) | Font-weight   | Type token  |
+| ------- | ------------------ | ------------- | ----------- |
+| Text    | 12 / 0.75          | Regular / 400 | `$label-01` |
 
 ## Structure
 
