--- a/src/pages/components/modal/style.mdx
+++ b/src/pages/components/modal/style.mdx
@@ -23,14 +23,14 @@ styling in the transactional modal.
 
 ## Typography
 
-Modal titles and labels should be set in sentence case. Keep all titles and
+Modal headings and labels should be set in sentence case. Keep all headings and
 labels concise and to the point. Modal labels are optional.
 
-| Class                        | Font-size (px/rem) | Font-weight   | Type token      |
-| ---------------------------- | ------------------ | ------------- | --------------- |
-| `.bx--modal-header__label`   | 12 / 0.75          | Regular / 400 | `$label-01`     |
-| `.bx--modal-header__heading` | 20 / 1.25          | Regular / 400 | `$heading-03`   |
-| `.bx--modal-content`         | 14 / 0.875         | Regular / 400 | `$body-long-01` |
+| Element | Font-size (px/rem) | Font-weight   | Type token    |
+| ------- | ------------------ | ------------- | ------------- |
+| Label   | 12 / 0.75          | Regular / 400 | `$label-01`   |
+| Heading | 20 / 1.25          | Regular / 400 | `$heading-03` |
+| Content | 14 / 0.875         | Regular / 400 | `$body-01`    |
 
 ## Structure
 
