--- a/src/pages/components/notification/style.mdx
+++ b/src/pages/components/notification/style.mdx
@@ -62,10 +62,10 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 Notification text should be set in sentence case with only the first word
 capitalized. Notification titles should be concise and to the point.
 
-| Element  | Font-size (px/rem) | Font-weight    | Type token       |
-| -------- | ------------------ | -------------- | ---------------- |
-| Title    | 14 / 0.875         | SemiBold / 600 | `$heading-01`    |
-| Subtitle | 14 / 0.875         | Regular / 400  | `$body-short-01` |
+| Element  | Font-size (px/rem) | Font-weight    | Type token            |
+| -------- | ------------------ | -------------- | --------------------- |
+| Title    | 14 / 0.875         | SemiBold / 600 | `$heading-compact-01` |
+| Subtitle | 14 / 0.875         | Regular / 400  | `$body-compact-01`    |
 
 ## Structure
 
