--- a/src/pages/components/number-input/style.mdx
+++ b/src/pages/components/number-input/style.mdx
@@ -57,11 +57,11 @@ while invalid.
 Number input labels should use sentence case, with only the first word in a
 phrase and any proper nouns capitalized.
 
-| Class                              | Font-size (px/rem) | Font-weight   | Type token       |
-| ---------------------------------- | ------------------ | ------------- | ---------------- |
-| `.bx--label`                       | 12 / 0.75          | Regular / 400 | `$label-01`      |
-| `.bx--number input[type='number']` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
-| `.bx--form-requirement`            | 12 / 0.75          | Regular / 400 | `$label-01`      |
+| Element       | Font-size (px/rem) | Font-weight   | Type token  |
+| ------------- | ------------------ | ------------- | ----------- |
+| Label         | 12 / 0.75          | Regular / 400 | `$label-01` |
+| Field input   | 14 / 0.875         | Regular / 400 | `$code-02`  |
+| Error message | 12 / 0.75          | Regular / 400 | `$label-01` |
 
 ## Structure
 
