--- a/src/pages/components/pagination/style.mdx
+++ b/src/pages/components/pagination/style.mdx
@@ -17,12 +17,12 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Typography
 
-Pagination text should be set in set in sentence case with the first letter of
-each word capitalized.
+Pagination text should be set in sentence case with the first letter of each
+word capitalized.
 
-| Class                   | Font-size (px/rem) | Font-weight   | Type token    |
-| ----------------------- | ------------------ | ------------- | ------------- |
-| `.bx--pagination__text` | 12 / 0.75          | Regular / 400 | `$caption-01` |
+| Element | Font-size (px/rem) | Font-weight   | Type token         |
+| ------- | ------------------ | ------------- | ------------------ |
+| Text    | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
 
 ## Structure
 
