--- a/src/pages/components/progress-indicator/style.mdx
+++ b/src/pages/components/progress-indicator/style.mdx
@@ -46,10 +46,10 @@ outlined circle.
 Labels should be one to two words only, with a limit of 16 characters total per
 label. All labels should be set in sentence case.
 
-| Class                    | Font-size (px/rem) | Font-weight   | Type token       |
-| ------------------------ | ------------------ | ------------- | ---------------- |
-| `.bx--progress-label`    | 14 / 0.875         | Regular / 400 | `$body-short-01` |
-| `.bx--progress-optional` | 14 / 0.875         | Regular / 400 | `$label-01`      |
+| Element        | Font-size (px/rem) | Font-weight   | Type token         |
+| -------------- | ------------------ | ------------- | ------------------ |
+| Label          | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
+| Optional label | 12 / 0.75          | Regular / 400 | `$label-01`        |
 
 ## Structure
 
