--- a/src/pages/components/slider/style.mdx
+++ b/src/pages/components/slider/style.mdx
@@ -29,13 +29,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Typography
 
-_Slider_ labels should be set in sentence case, with only the first word in a
+Slider labels should be set in sentence case, with only the first word in a
 phrase and any proper nouns capitalized, and no more than three words.
 
-| Class                      | Font-size (px/rem) | Font-weight   | Type token       |
-| -------------------------- | ------------------ | ------------- | ---------------- |
-| `.bx--label`               | 12 / 0.75          | Regular / 400 | `$label-01`      |
-| `.bx--slider__range-label` | 14 / 0.875         | Regular / 400 | `$body-short-01` |
+| Element     | Font-size (px/rem) | Font-weight   | Type token  |
+| ----------- | ------------------ | ------------- | ----------- |
+| Label       | 12 / 0.75          | Regular / 400 | `$label-01` |
+| Range label | 14 / 0.875         | Regular / 400 | `$code-02`  |
 
 ## Structure
 
