--- a/src/pages/components/structured-list/style.mdx
+++ b/src/pages/components/structured-list/style.mdx
@@ -26,13 +26,13 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 
 ## Typography
 
-Structured list headers should be set in title case, while all other text is set
-in sentence case. All typography is left aligned.
+Structured list headings should be set in title case, while all other text is
+set in sentence case. All typography is left aligned.
 
-| Property                  | Font-size (px/rem) | Font-weight     | Type token      |
-| ------------------------- | ------------------ | --------------- | --------------- |
-| `.bx--structured-list-th` | 14 / 0.875         | Semi-Bold / 600 | `$heading-01`   |
-| `.bx--structured-list`    | 14 / 0.875         | Regular / 400   | `$body-long-01` |
+| Element   | Font-size (px/rem) | Font-weight     | Type token            |
+| --------- | ------------------ | --------------- | --------------------- |
+| Heading   | 14 / 0.875         | Semi-Bold / 600 | `$heading-compact-01` |
+| List text | 14 / 0.875         | Regular / 400   | `$body-01`            |
 
 ## Structure
 
