--- a/src/pages/components/toggle/style.mdx
+++ b/src/pages/components/toggle/style.mdx
@@ -43,10 +43,10 @@ tabs: ['Usage', 'Style', 'Code', 'Accessibility']
 Toggle labels should be set in sentence case, with only the first word in a
 phrase and any proper nouns capitalized, and no more than three words.
 
-| Element     | Font-size (px/rem) | Font-weight   | Type token      |
-| ----------- | ------------------ | ------------- | --------------- |
-| Label       | 12 / 0.75          | Regular / 400 | `$label-01`     |
-| Toggle text | 14 / 0.875         | Regular / 400 | `$body-long-01` |
+| Element     | Font-size (px/rem) | Font-weight   | Type token         |
+| ----------- | ------------------ | ------------- | ------------------ |
+| Label       | 12 / 0.75          | Regular / 400 | `$label-01`        |
+| Toggle text | 14 / 0.875         | Regular / 400 | `$body-compact-01` |
 
 ## Structure
 
