--- a/src/pages/migrating/guide/design.mdx
+++ b/src/pages/migrating/guide/design.mdx
@@ -89,20 +89,26 @@ have introduced two different types of color token layering models—Layer set
 tokens and Contextual layer tokens. You can choose to use one model over the
 other depending on which one makes most sense to migrate to for your product.
 
-See Carbon's
-[color overview](https://v11.carbondesignsystem.com/guidelines/color/overview/#tokens)
-and
-[color implementation](https://v11.carbondesignsystem.com/guidelines/color/overview)
-guidance for more information.
+See Carbon's guidance below for more information:
 
 <Row className="resource-card-group">
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Migrating color tokens"
-      href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md">
-      <MdxIcon name="github" />
-    </ResourceCard>
-  </Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Color overview"
+    href="https://v11.carbondesignsystem.com/guidelines/color/overview">
+
+![Carbon icon](images/carbon.svg)
+
+  </ResourceCard>
+
+</Column>
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Migrating color tokens"
+    href="https://github.com/carbon-design-system/carbon/blob/main/docs/migration/11.x-color.md">
+    <MdxIcon name="github" />
+  </ResourceCard>
+</Column>
 </Row>
 
 ### Inline theming
